# dia

./: .gitignore  PORTING-GTK4.md  a.dia  meson.build  meson_options.txt
.github/: dependabot.yml
.github/packaging/: Info.plist  org.gnome.Dia.desktop
.github/scripts/: release-notes.sh  virustotal-scan.sh
.github/workflows/: ci.yml
data/: org.gnome.Dia.metainfo.xml.in
lib/: arrows.c  bezier_conn.c  beziershape.c  connectionpoint.c  dia-arrow-cell-renderer.c  dia-arrow-chooser.c  dia-arrow-preview.c  dia-arrow-selector.c  dia-colour-cell-renderer.c  dia-colour-selector.c  dia-font-selector.c  dia-io.c  dia-line-cell-renderer.c  dia-line-chooser.c  dia-line-preview.c  dia-line-style-selector.c  dia-simple-list.c  dia-simple-list.h  dia-size-selector.c  dia-unit-spinner.c  dia-unit-spinner.h  dia_dirs.c  dia_svg.c  dia_xml.c  diacontext.c  diaoptionmenu.c  diaoptionmenu.h  diapatternselector.c  diarenderer.c  font.c  message.c  orth_conn.c  persistence.c  poly_conn.c  polyshape.c  prop_dict.c  prop_inttypes.c  prop_matrix.c  prop_pixbuf.c  prop_sdarray_widget.c  (+5 more)
lib-port/: meson.build
objects-port/: meson.build  register-objects.c  register-objects.h
objects/Database/: compound.c
objects/ER/: relationship.c
objects/UML/: association.c  class.c  dependency.c  generalization.c  implements.c  message.c  realizes.c  umlformalparameter.c
objects/custom/: custom_object.c  shape_info.c  shape_typeinfo.c
objects/flowchart/: box.c  diamond.c  ellipse.c  parallelogram.c
objects/network/: wanlink.c
objects/standard/: arc.c  bezier.c  beziergon.c  line.c
plug-ins-port/: meson.build
plug-ins-port/pdf/: pdf-plugin.c
skeleton/: dia-shell.c  dia-shell.h  dia-skeleton.gresource.xml  dia.rc  main.c  meson.build
tests/: meson.build  test-io.c
tests-port/: meson.build  test-arc-copy-port.c  test-arrows-port.c  test-bezier-copy-port.c  test-connpoint-slope-port.c  test-custom-shape-aspect-port.c  test-custom-shape-parse-port.c  test-dia-dirs-port.c  test-dia-svg-color-port.c  test-dia-xml-parse-port.c  test-dia-xml-string-port.c  test-diacontext-port.c  test-flowchart-text-bbox-port.c  test-line-copy-port.c  test-objects-port.c  test-relationship-copy-port.c  test-rounded-polyline-port.c  test-stdpath-dashlen-port.c  test-uml-formalparam-port.c  test-wanlink-copy-port.c
tests/io/: compressed.dia  leading-whitespace.dia  plain.dia
ui-tests/: 99-uinput.rules  README.md  run.sh  test_broken_orthconn.py  test_broken_polyobjects.py  test_cli_batch.py  test_cli_export.py  test_cli_export.sh  test_cli_export_objects.py  test_cli_parity.py  test_image_relpath.py  test_missing_image.py  test_shell.py
