option('gtk_doc',
       type: 'boolean', value: false,
       description: 'Whether to generate the API reference')
option('doc',
       type: 'feature', deprecated: {'true': 'enabled', 'false': 'disabled'},
       description: 'Whether to generate the doc')
option('tests',
       type: 'boolean', value: true,
       description: 'Whether to compile unit tests')
option('legacy_gtk3',
       type: 'boolean', value: false,
       description: 'Build the legacy GTK3 tree (lib/objects/app/plug-ins) instead of the GTK4/libadwaita port skeleton. The GTK4 port is the default; this is a reference escape hatch and requires GTK3 + libxml >= 2.14.')
